@@ -33,7 +33,7 @@ Kaber's Virtual K4 samples and //christian's exegesis of the Ensoniq
 SQ-80 wavetable ROMs. See the enclosed file AUTHORS for more
 details.
 
-WhySynth is written by Sean Bolton, and copyright (c) 2012 under the
+WhySynth is written by Sean Bolton, and copyright (c) 2013 under the
 GNU General Public License, version 2 or later.  See the enclosed
 file COPYING for details.  While this software is 'free' within the
 requirements of this license, I (Sean) would appreciate any or all
@@ -316,7 +316,8 @@ ways:
 Many of the the bipolar patch parameters (whose values span zero,
 such as the 'Detune' and 'Amp Mod Amount' controls) have a small
 square button directly below the knob.  Clicking this button will
-set the parameter directly to zero.
+set the parameter directly to zero. A similar small button below the
+Mix tab 'Pan' controls will set the panning directly to center.
 
 The menu buttons may also be manipulated in several ways:
     - Clicking the button with mouse button 1 will cause a menu of
