@@ -1,3 +1,8 @@
+20130224
+
+* Added buttons to center the pan controls, on the suggestion of
+    Robert from Germany.
+
 20121128
 
 * Jonathan H. Pickard added support for panning of the output mix via
